# ros2_robot

./: .gitignore  README.md
ugv_ws/: build_and_launch.sh  mujoco_launch.sh  rviz_launch.sh
ugv_ws/src/: urdf_to_mjcf.py
ugv_ws/src/robot_1/: CMakeLists.txt  package.xml
ugv_ws/src/robot_1/config/: joint_controllers.yaml  joint_names_robot_1.yaml  joint_trajectory_controller.yaml
ugv_ws/src/robot_1/launch/: gazebo.launch  robot.launch.py  rviz.launch.py
ugv_ws/src/robot_1/meshes/: base_link.STL  link_1.STL  link_2.STL  wheel1_link.STL  wheel2_link.STL  wheel3_link.STL  wheel4_link.STL
ugv_ws/src/robot_1/rviz/: robot_1.rviz  robot_1_config.rviz
ugv_ws/src/robot_1/urdf/: robot.urdf  robot.xacro  robot_1.csv  robot_1.urdf  robot_1.xacro
ugv_ws/src/ugv_pkg/: package.xml  setup.py
ugv_ws/src/ugv_pkg/resource/: ros2_control.yml  ugv_robot.urdf
ugv_ws/src/ugv_pkg/ugv_pkg/: camera.py  lidar.py  mujoco_connect.py  robot_driver.py  robot_launch.py
ugv_ws/src/ugv_pkg/ugv_robot/urdf/: ugv_robot.csv  ugv_robot.proto  ugv_robot.xacro
ugv_ws/src/ugv_pkg/worlds/: .robot_world.wbproj  robot_world.wbproj  robot_world.wbt  robot_world_map.yaml
