<package format="2">
  <name>ugv_pkg</name>
  <version>0.0.1</version>
  <description>Paquete para integrar sensores de MuJoCo con ROS 2</description>
  <maintainer email="caio.vaz137@gmail.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencias necesarias -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>numpy</depend>
  <depend>mujoco</depend>

  <!-- Opcional: Si usarás RViz directamente -->
  <depend>rviz_common</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

